First functional service SOCKET, send event delete to backend and receive data from it!, missing refactorice

--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
   "printWidth": 350,
   "semi": true,
   "singleQuote": true,
-  "objectWrap": "collapse"
+  "objectWrap": "collapse",
+  "tabWidth": 4
 }
